# psp2etoi

./: CMakeLists.txt  CONFIGURATION.md  README.md  psp2etoi.vpk
app/: commands.c  commands.h  main.c  main.h  utils.c
cmep/: main.c  spl-defs.h
cmep/encrypt_udi/: Makefile  main.c  udienc.h  udienc_defs.h
cmep/patch_ussm_snvs_rw/: Makefile  main.c  main.x  pussm.h
kernel/: crc32.c  main.c  psp2etoiK.yml
res/: psp2spl.skprx  template.xml
samples/qaf/pch/: input_cex_05D3267FDFD6_QAF_QATEAM_FULL_E.cfg
samples/qaf/pdel/: input_028A1F7EA815_QAF_SYS_DEV_I.cfg  input_0FF48CED2B01_QAF_MGVIDEO_ADV_I.cfg  input_105CA12D761D_QAF_QATEAM_MINI_E.cfg  input_166BAB5EC171_QAF_MGVIDEO_DEV_I.cfg
samples/qaf/vte/: input_cex_021862DBE455_QAF_QATEAM_FULL_E.cfg  input_dex_00376CF28DA3_QAF_QATEAM_FULL_E.cfg
samples/req/: input_clone.req  input_kit_act.req
